@@ -2,24 +2,29 @@
 <window>
     <defaultcontrol always="true">5</defaultcontrol>
     <allowoverlay>yes</allowoverlay>
+	<include>fadeInOut</include>
     <controls>
         <include>modalDialog</include>
         <control type="group">
-            <posx>col-1-begin</posx>
-            <posy>row-4-begin</posy>
+            <posx>col-4-begin</posx>
+            <posy>row-5-begin</posy>
+			<!--animations-->
+            <include>modalDialogInOut</include>
             <control type="image">
                 <posx>0</posx>
-                <posy>0</posy>
-                <width>16-col-gutter</width>
+                <posy>-12</posy>
+                <width>8-col</width>
                 <height>-</height>
                 <aspectratio align="left" aligny="top">keep</aspectratio>
+				<bordertexture border="3" colordiffuse="33FFFFFF">colors/selected.png</bordertexture>
+                <bordersize>3</bordersize>
                 <texture>$INFO[listitem.thumb]</texture>
             </control>
             <control type="panel" id="5">
-                <posx>16-col</posx>
-                <posy>0</posy>
-                <width>8-col</width>
-                <height>10-row</height>
+                <posx>9-col</posx>
+                <posy>-30</posy>
+                <width>9-col</width>
+                <height>12-row</height>
                 <itemlayout width="8-col" height="36">
                     <control type="label">
                         <posx>0</posx>
