@@ -112,10 +112,10 @@
                 <!--page scrollbar-->
                 <control type="group" id="8000">
                     <visible>Control.IsVisible(60)</visible>
-                    <animation effect="fade" start="100" end="70" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
+                    <animation effect="fade" start="100" end="0" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
                     <control type="scrollbar" id="60">
-                        <posx>108r</posx>
-                        <posy>276</posy>
+                        <posx>72r</posx>
+                        <posy>258</posy>
                         <height>672</height>
                         <onleft>9999</onleft>
                     </control>
