@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-    <defaultcontrol>2</defaultcontrol>
     <controls>
         <!--vignette-->
         <control type="image">
@@ -12,7 +11,7 @@
         <!--picture info-->
         <control type="group">
             <posx>col-5-begin</posx>
-            <posy>row-17-begin</posy>
+            <posy>row-18-begin</posy>
             <!--background-->
             <control type="image">
                 <posx>0</posx>
@@ -52,7 +51,7 @@
                 <shadowcolor>-</shadowcolor>
                 <label>$INFO[Slideshow.Filedate]</label>
             </control>
-        </control>
+        </control>		
         <!--debugging-->
         <include>DebugGrid</include>
         <control type="label">
